--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+<link rel="stylesheet" href="css/style.css">
 </head>
 <meta charset="utf-8">
 <body ng-app='MenuApp'>
@@ -20,12 +21,15 @@
 <!--&lt;!&ndash; Routes &ndash;&gt;-->
 <script src="routes.js"></script>
 
+<script src="categoryDetail.component.js"></script>
 
 <script src="categories.component.js"></script>
 
 <script src="menudata.service.js"></script>
 
 <script src="restaurantcategories.controller.js"></script>
+
+<script src="categoryDetailsController.js"></script>
 
 
 
